src/objects/Transaction_Queue__c.object
<CustomObject>
    <description>Stores requests from user without permissions to be fulfilled by a login with higher auth</description>
    <fields>
        <fullName>Date_Time_Fulfilled__c</fullName>
        <description>Date/time result was saved to table</description>
        <label>Date/Time Fulfilled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Fulfilled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether or not the request has been fulfilled</description>
        <label>Fulfilled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Input_Params__c</fullName>
        <description>name/value pair of input vars.  json format</description>
        <label>Input Params</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Received_Date_Time__c</fullName>
        <description>Date/time the request was picked up by the handler</description>
        <label>Received Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Triggered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>whether this transaction has triggered action by the handler</description>
        <label>Request Triggered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <picklist>
            <picklistValues>
                <fullName>Action Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavior Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Person Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skill Worksheet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acknowledge Plan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Date_Time__c</fullName>
        <description>Date/time the initial request was made</description>
        <label>Requested Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requesting_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>user id that requested txn</description>
        <label>Requesting User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Transaction_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result_Code__c</fullName>
        <description>Result code of transaction (success/error/etc).</description>
        <label>Result Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return_Value_2__c</fullName>
        <description>overflow for JSON result</description>
        <label>Return Value 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Value_3__c</fullName>
        <description>overflow for JSON result</description>
        <label>Return Value 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Value_4__c</fullName>
        <description>overflow for JSON result</description>
        <label>Return Value 4</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Value__c</fullName>
        <description>JSON string containing serialized response to request</description>
        <label>Return Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Transaction Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Request_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>